Fix jpeg->jpg, position align, fav color

--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@
 /*//////////////////////////////////////*/
 
 main {
-    background: url(../img/bg_paperTexture.jpeg) repeat center;
+    background: url(../img/bg_paperTexture.jpg) repeat center;
     width: 100%;
     padding-bottom: 42px;
 }
@@ -77,7 +77,7 @@ main {
     content: '';
     display: block;
     position: absolute;
-    top: 22vw;
+    top: 35vh;
     right: -5vw;
     border-radius: 50%;
     width: 30vw;
@@ -91,8 +91,8 @@ main {
     color: #000;
 }
 
-#home ul li:last-child a {
-    z-index: 2;
+#home ul li a {
+    z-index: 1;
     position: relative;
 }
 
@@ -226,7 +226,8 @@ main {
 
 /* || fav */
 #fav {
-    padding: 6vw 7% 10vw;
+    padding: 2vw 7% 10vw;
+    margin-top: 5vw;
 }
 #fav h2 {
     font-size: 15rem;
@@ -238,13 +239,12 @@ main {
     font-size: 2.2rem;
     padding: 0.95vw 2vw;
     border-radius: 50px;
-    background-color: #ccc;
-    color: #333;
+    color: #fff;
     margin: 10px 5px;
 }
 
 #fav ul li:hover {
-    background: rgba(204, 204, 204, 0.575);
+    opacity: 0.7;
 }
 
 #fav ul li::before {
